# ferrograph

./: .cursorrules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  pages.yml  release-binaries.yml  release-plz.yml
assets/: BRAND.md  ascii-banner.txt  metaball-demo.html  render-pngs.sh
assets/gen-logo/: Cargo.toml
assets/gen-logo/src/: main.rs
patches/graph_builder/src/input/: edgelist.rs
src/: config.rs  lib.rs  main.rs  watch.rs
src/graph/: mod.rs  query.rs  schema.rs  store.rs
src/mcp/: mod.rs  tools.rs
src/pipeline/: ast.rs  calls.rs  dead_code.rs  discovery.rs  expands.rs  git_coupling.rs  macros.rs  mod.rs  modules.rs  ownership.rs  placeholder.rs  references.rs  traits.rs  unsafe_map.rs
src/search/: embeddings.rs  mod.rs
tests/: integration_cli.rs  integration_pipeline.rs
tests/fixtures/single_crate/: Cargo.toml
tests/fixtures/single_crate/src/: lib.rs  main.rs
tests/fixtures/workspace/crate_a/src/: lib.rs
tests/fixtures/workspace/crate_b/src/: lib.rs
