[package]
name = "ferrograph"
version = "0.1.0"
edition = "2021"
description = "Graph-powered Rust code intelligence"
license = "MIT"
repository = "https://github.com/GarthDB/ferrograph"
readme = "README.md"
rust-version = "1.88"
keywords = ["rust", "code-analysis", "mcp", "knowledge-graph", "tree-sitter"]
categories = ["development-tools"]
exclude = ["patches/", ".ferrograph", "tests/fixtures/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cozo = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
ignore = "0.4"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
notify = "6"
ctrlc = "3"
glob = "0.3"
[dev-dependencies]
insta = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
default = []
git = ["dep:gix"]  # Phase 10: git change coupling
ra = ["dep:ra_ap_ide"]  # Phase 2: rust-analyzer for trait/ownership/unsafe/macro

[dependencies.gix]
optional = true
version = "0.79"

[dependencies.ra_ap_ide]
optional = true
version = "0.0.309"

# crates.io graph_builder 0.4.1 has a rayon compatibility bug (into_par_iter().copied()).
# We patch with a local fix. For crates.io publish: remove this patch once upstream
# graph_builder releases a fix, or publish the patched crate under another name and patch here by version.
[patch.crates-io]
graph_builder = { path = "patches/graph_builder" }
