[package]
name = "ferrograph"
version = "1.1.0"
edition = "2021"
description = "Graph-powered Rust code intelligence"
license = "MIT"
repository = "https://github.com/GarthDB/ferrograph"
readme = "README.md"
rust-version = "1.88"
keywords = ["rust", "code-analysis", "mcp", "knowledge-graph", "tree-sitter"]
categories = ["development-tools"]
exclude = [".ferrograph", "tests/fixtures/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cozo = "0.7"
# Pin rayon <1.11 so cozo's graph_builder 0.4.1 compiles (rayon 1.11 added IntoParallelIterator for Box<[T]>, breaking graph_builder).
rayon = ">=1.5, <1.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
ignore = "0.4"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
notify = "6"
ctrlc = "3"
glob = "0.3"

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
default = []
git = ["dep:gix"]  # Phase 10: git change coupling
ra = ["dep:ra_ap_ide"]  # Phase 2: rust-analyzer for trait/ownership/unsafe/macro

[dependencies.gix]
optional = true
version = "0.79"

[dependencies.ra_ap_ide]
optional = true
version = "0.0.309"
